--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/database_design?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/nba_team?serverTimezone=UTC
 spring.datasource.username=dbDesign
 spring.datasource.password=dbDesign
 spring.jpa.hibernate.ddl-auto=update
